wescamp.py: Update from add-on server

--- a/The_Legend_Begins/_main.cfg
+++ b/The_Legend_Begins/_main.cfg
@@ -221,7 +221,7 @@
 {~add-ons/The_Legend_Begins/scenarios}
 {~add-ons/The_Legend_Begins/utils/terrains.cfg}
 {~add-ons/The_Legend_Begins/utils/terrain-graphics.cfg}
-{~add-ons/The_Legend_Begins/macros/common.cfg}
+#{~add-ons/The_Legend_Begins/macros/common.cfg}
 {~add-ons/The_Legend_Begins/macros/custom-team-colors.cfg}
 [+units]
     {~add-ons/The_Legend_Begins/units}
@@ -229,6 +229,10 @@
 
 {~add-ons/War_of_Legends/_main.cfg}
 {LEGEND_CAMPAIGN}
+
+[lua]
+    code=<<wesnoth.dofile "~add-ons/The_Legend_Begins/lua/wml-tags.lua">>
+[/lua]
 
 [lua]
         code = <<
