--- a/The_Legend_Begins/macros/custom-advancement.cfg
+++ b/The_Legend_Begins/macros/custom-advancement.cfg
@@ -46,15 +46,19 @@
    [/modify_unit]
 [/event]
 
-# Spearman in White Realm
-# Can't become Swordsman
-# As only high-ranking officers wield them there
+# Same as above
+# Since Infantrymen are the main sword-welding
+# units, there's basically no point in allowing
+# Spearman to advance to Swordsmen
+# So, I gave this limited advancement
+# Have fun, with Halberdiers! ;-) 
 
 [event]
     name="recruit"
     first_time_only=no
     [filter]
         type="Spearman"
+        side=1
     [/filter]
     [modify_unit]
         [filter]
