--- a/The_Legend_Begins/scenarios/episode-1/03_The_Misty_Forest.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/03_The_Misty_Forest.cfg
@@ -6,6 +6,7 @@
     map_data="{~add-ons/The_Legend_Begins/maps/episode-1/03_The_Misty_Forest.map}"
 
     {DEFAULT_SCHEDULE_MORNING}
+    {SADIA_CUSTOM_ADVANCEMENT}
 
     {DEFAULT_MUSIC_PLAYLIST}
     
