--- a/The_Legend_Begins/scenarios/episode-1/08_Dead_Caves.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/08_Dead_Caves.cfg
@@ -11,6 +11,7 @@
 
    victory_when_enemies_defeated=no
    {TURNS 90 85 80}
+   {SADIA_CUSTOM_ADVANCEMENT}
    {DEFAULT_MUSIC_PLAYLIST}
 
 # No story. This is intentional.
