--- a/The_Legend_Begins/scenarios/episode-1/19_Dawn_of_War.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/19_Dawn_of_War.cfg
@@ -8,6 +8,7 @@
    {TURNS 60 58 55}
    {DEFAULT_SCHEDULE_DAWN}
    {DEFAULT_MUSIC_PLAYLIST}
+   {SADIA_CUSTOM_ADVANCEMENT}
 
    {~add-ons/The_Legend_Begins/macros/deaths.cfg}
    {~add-ons/The_Legend_Begins/macros/recurring-events.cfg}
@@ -19,7 +20,7 @@
          story= _ "With plans made and troops prepared, the allies launched the attack on the northern orcish fort of Garshak..."
       [/part]
       [part]
-         story= _ "This battle signaled the true beginning of the <i>Great War</i>..."
+         story= _ "This battle signalled the true beginning of the <i>Great War</i>..."
       [/part]
    [/story]
 
