--- a/The_Legend_Begins/scenarios/episode-1/22_Ogres_and_Goblins.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/22_Ogres_and_Goblins.cfg
@@ -9,7 +9,7 @@
    victory_when_enemies_defeated=no
 
    {DEFAULT_SCHEDULE}
-
+   {SADIA_CUSTOM_ADVANCEMENT}
    {DEFAULT_MUSIC_PLAYLIST}
 
    {~add-ons/The_Legend_Begins/macros/deaths.cfg}
@@ -216,6 +216,7 @@
       recruit="Orcish Warrior,Orcish Grunt,Orcish Archer,Orcish Crossbowman,Orcish Assassin,Wolf Rider,Goblin Cavalry"
       share_view=yes
       share_map=no
+      unrenameable=yes
       save_id=Kojac
       id="Kojac"
       profile="portraits/kojac.png"
