--- a/The_Legend_Begins/scenarios/episode-1/24_The_Passing_of_Barus.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/24_The_Passing_of_Barus.cfg
@@ -19,6 +19,7 @@
 
    {DEFAULT_MUSIC_PLAYLIST}
    {DEFAULT_SCHEDULE_DUSK}
+   {SADIA_CUSTOM_ADVANCEMENT}
 
    {TURNS 98 94 90}
 
@@ -219,6 +220,7 @@
       recruit="Orcish Warrior,Orcish Grunt,Orcish Shaman,Orcish Archer,Orcish Crossbowman,Orcish Assassin,Wolf Rider,Goblin Cavalry,Young Ogre"
       share_view=yes
       share_map=no
+      unrenameable=yes
       save_id=Kojac
       id="Kojac"
       name= _ "Kojac"
@@ -239,6 +241,7 @@
       user_team_name= _ "Northern Allies"
       {GOLD 280 250 150}
       {INCOME 2 1 0}
+      unrenameable=yes
       id="Galec"
       type="Elvish Marshal"
       name= _ "Galec" 
@@ -262,6 +265,7 @@
       id="Krog"
       profile="portraits/krog.png"
       name= _ "Krog"
+      unrenameable=yes
       type="Troll Warlord"
       user_team_name= _ "Northern Allies"
       {FLAG_VARIANT ragged}
