--- a/The_Legend_Begins/scenarios/episode-1/20_Winter_Skirmish.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/20_Winter_Skirmish.cfg
@@ -141,6 +141,7 @@
 
    {DEFAULT_SCHEDULE_DUSK}
    {DEFAULT_MUSIC_PLAYLIST}
+   {SADIA_CUSTOM_ADVANCEMENT}
 
    {~add-ons/The_Legend_Begins/macros/deaths.cfg}
    {~add-ons/The_Legend_Begins/macros/recurring-events.cfg}
