--- a/The_Legend_Begins/scenarios/episode-1/21_Gartok_The_Orcish_Capital.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/21_Gartok_The_Orcish_Capital.cfg
@@ -10,6 +10,7 @@
 
    {DEFAULT_SCHEDULE_FIRST_WATCH}
    {DEFAULT_MUSIC_PLAYLIST}
+   {SADIA_CUSTOM_ADVANCEMENT}
 
    {~add-ons/The_Legend_Begins/macros/deaths.cfg}
    {~add-ons/The_Legend_Begins/macros/recurring-events.cfg}
@@ -191,6 +192,7 @@
       profile="portraits/galec.png"
       recruit="Elvish Fighter,Elvish Archer,Elvish Shaman,Elvish Marksman,Elvish Scout"
       share_view=yes
+      unrenameable=yes
       share_map=no
       save_id=Galec
       id="Galec"
@@ -216,6 +218,7 @@
       recruit="Troll Whelp,Troll Mystic,Troll Rocklobber,Troll,Saurian Skirmisher,Saurian Augur,Saurian Ambusher"
       share_view=yes
       share_map=no
+      unrenameable=yes
       save_id=Krog
       id="Krog"
       profile="portraits/krog.png"
