--- a/The_Legend_Begins/scenarios/episode-1/25_Brother_Against_Brother.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/25_Brother_Against_Brother.cfg
@@ -15,6 +15,8 @@
    # This is made complicated by allowing the AI
    # to take control of side 7, 9, and 10.
 
+   {SADIA_CUSTOM_ADVANCEMENT}
+
    [story]
       [part]
          music="elvish-theme.ogg"
@@ -394,6 +396,7 @@
       profile="portraits/kojac.png"
       recruit="Orcish Warrior,Orcish Grunt,Orcish Shaman,Orcish Archer,Orcish Crossbowman,Orcish Assassin,Wolf Rider,Goblin Cavalry,Young Ogre"
       save_id=Kojac
+      unrenameable=yes
       id="Kojac"
       name= _ "Kojac"
       type="Orcish Slurbow"
@@ -425,6 +428,7 @@
       {FLAG_VARIANT wood-elvish}
       id="Galec"
       name= _ "Galec"
+      unrenameable=yes
       type="Elvish Marshal"
       profile="portraits/galec.png"
       {INCOME 3 2 1}
@@ -453,6 +457,7 @@
       type="Troll Warlord"
       recruit="Troll Whelp,Troll Mystic,Troll Rocklobber,Troll"
       save_id=Krog
+      unrenameable=yes
       [modifications]
          {TRAIT_STRONG}
          {TRAIT_FEARLESS}
@@ -476,6 +481,7 @@
       color=white
       {FLAG_VARIANT long}
       controller=human
+      unrenameable=yes
       user_team_name= _ "Elementals"
       no_leader=yes
       recruit="Wisp,Sylph,Vine Beast,Kobold,Stone Golem,Vine Tiger,Zephyr,Razorbird,Thunderbird"
