--- a/The_Legend_Begins/scenarios/episode-1/26_The_Great_Siege.cfg
+++ b/The_Legend_Begins/scenarios/episode-1/26_The_Great_Siege.cfg
@@ -13,6 +13,7 @@
 
    {DEFAULT_SCHEDULE_24H}
    {DEFAULT_MUSIC_PLAYLIST}
+   {SADIA_CUSTOM_ADVANCEMENT}
 
    # I suck at making romantic scenes
    # If anybody can make this better
@@ -479,6 +480,7 @@
       user_team_name= _ "Elves"
       {GOLD 180 150 120}
       id="Galec"
+      unrenameable=yes
       name= _ "Galec"
       type="Elvish Marshal"
       profile="portraits/galec.png"
