--- a/The_Legend_Begins/scenarios/episode-3/58_Drastic_Measures.cfg
+++ b/The_Legend_Begins/scenarios/episode-3/58_Drastic_Measures.cfg
@@ -813,6 +813,11 @@
        [/message]
 
        {VARIABLE wall_completed no}
+       [message]
+           speaker="narrator"
+           image="wesnoth-icon.png"
+           message= _ "You can now recruit <i>human</i> and <i>dwarven</i> soldiers and may also recall the veterans from the first scenario of this episode."
+       [/message]
     [/event]
 
     [event]
