wescamp.py: Update from add-on server

--- a/The_Legend_Begins/units/woodlanders/Swamp_Elfin.cfg
+++ b/The_Legend_Begins/units/woodlanders/Swamp_Elfin.cfg
@@ -71,7 +71,7 @@
         name=spear
         description= _ "spear"
         icon="attacks/spear-orcish.png"
-        type=impact
+        type=pierce
         range=melee
         damage=5
         number=3
